feat:corrigidos os erros do normalize name na entidade product